--- a/question-1/challenge-b/Dockerfile
+++ b/question-1/challenge-b/Dockerfile
@@ -3,4 +3,8 @@ FROM python:3.6
 ADD requirements.txt .
 RUN pip install -r requirements.txt
 
-ADD solution.py .
+ADD *.py ./
+
+EXPOSE 5000
+
+CMD python server.py --host=$HOST --port=$PORT --db=$DB
